# PyQubed-GNC

TrajOpt/MATLAB/Ctest/: milqr.h
TrajOpt/MATLAB/MILQR/: SatelliteTest.m  boxQPsolve.m  milqr.m  satellite_cost.m  satellite_step.m
TrajOpt/MATLAB/MILQR/utils/: L_mult.m  chol_solve.m  quat_rotate.m  skew_mat.m
TrajOpt/OldTestExamples/: SimpleSatellite.cpp  iLQR.cpp  iLQR.h  iLQRsimple.cpp  iLQRsimple.h
TrajOpt/cpp/: CMakeLists.txt  Dynamics.hpp  MILQR.cpp  MILQR.hpp  Objective.hpp  Quaternion.cpp  Quaternion.hpp  SatelliteDynamics.cpp  SatelliteDynamics.hpp  SatelliteObjective.cpp  SatelliteObjective.hpp  common.hpp  data_utils.cpp
